# aegis-ml

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
aegis/: graph.py
aegis/edges/: eval.py
aegis/executors/: __init__.py  modal_runner.py
aegis/generators/: __init__.py  base.py  template.py
aegis/models/: __init__.py  state.py
aegis/nodes/: __init__.py  evaluator.py  gate.py  generator.py  intent.py  intent_llm.py  profiler.py  remediate.py  reporter.py
aegis/profilers/: cost.py
fitcheck/: __init__.py  api.py  cli.py  nlparse.py  solver.py
fitcheck/datasets/: analyzer.py
fitcheck/hardware/: registry.py
fitcheck/hub/: resolver.py
fitcheck/models/: profiles.py  results.py
fitcheck/profilers/vram/: engine.py
fitcheck/profilers/vram/families/: moe.py
fitcheck/report/: formatter.py
templates/: hf_training.py.j2
tests/: conftest.py  test_e2e.py  test_graph.py
tests/edges/: test_eval.py
tests/executors/: test_modal.py
tests/fitcheck/: conftest.py  test_api.py  test_api_dataset.py  test_cli.py  test_nlparse.py  test_solver.py
tests/fitcheck/profilers/: test_estimator.py  test_moe_family.py
tests/fitcheck/report/: test_formatter.py
tests/generators/: test_templates.py
tests/models/: test_state.py
tests/nodes/: __init__.py  test_evaluator.py  test_gate.py  test_generator.py  test_intent.py  test_intent_llm.py  test_profiler.py  test_remediate.py  test_reporter.py
ui/: streamlit_app.py
