[project]
name = "fitcheck"
version = "0.1.0"
description = "Know before you train — VRAM estimation for LLM fine-tuning"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
fitcheck = "fitcheck.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fitcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
